Config, file & storage system overhaul